Fix: 미션을 불러올때 null pointer exception이 나오는 오류 수정.